wk_taa_taaqa/src/objects/Ancillary_Cancellations__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Id</field>
                <operation>equals</operation>
                <valueField>Account.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ancillary Cancellationss</relationshipLabel>
        <relationshipName>Ancillary_Cancellationss</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Notes__c</fullName>
        <label>Cancellation Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Product__c</fullName>
        <label>Cancellation Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Axcess Document</fullName>
                </value>
                <value>
                    <fullName>Axcess Practice</fullName>
                </value>
                <value>
                    <fullName>Axcess Workstream</fullName>
                </value>
                <value>
                    <fullName>Document OP</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Knowledge Coach</fullName>
                </value>
                <value>
                    <fullName>Knowledge Connect OP</fullName>
                </value>
                <value>
                    <fullName>Knowledge Connect SaaS</fullName>
                </value>
                <value>
                    <fullName>Knowledge Tools</fullName>
                </value>
                <value>
                    <fullName>Practice Management</fullName>
                </value>
                <value>
                    <fullName>Scan</fullName>
                </value>
                <value>
                    <fullName>Scan SaaS</fullName>
                </value>
                <value>
                    <fullName>Trial Balance</fullName>
                </value>
                <value>
                    <fullName>Active Data</fullName>
                </value>
                <value>
                    <fullName>AutoFlow</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Practice Advantage</fullName>
                </value>
                <value>
                    <fullName>Practice Manager</fullName>
                </value>
                <value>
                    <fullName>PdFlyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Out of Business</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Auto - Cancel</fullName>
                </value>
                <value>
                    <fullName>Consolidated to One Vendor</fullName>
                </value>
                <value>
                    <fullName>Merger/Changed Vendors</fullName>
                </value>
                <value>
                    <fullName>Merger/Transfer to Parent</fullName>
                </value>
                <value>
                    <fullName>Missing Key Features</fullName>
                </value>
                <value>
                    <fullName>No Longer Needed/Using</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Price/Value</fullName>
                </value>
                <value>
                    <fullName>Support/Service Issues</fullName>
                </value>
                <value>
                    <fullName>Technical/Performance Issues</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Id</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Ancillary_Cancellationss</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ancillary Cancellations</label>
    <nameField>
        <label>Ancillary Cancellations Acct#</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ancillary Cancellations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>